--- a/Q4_FA1_HTML.html
+++ b/Q4_FA1_HTML.html
@@ -12,7 +12,7 @@
 		    <br><br><hr><br><p style="text-align:center; font-size:20px;"><strong>LOG IN</strong></p>
 			<p><strong><label for="firstName" style="float:left">First Name:</strong></p></label><input type="text" id="firstName" required>
 			<p><strong><label for="lastName" style="float:left">Last Name:</label></strong></p><input type="text" id="lastName" required>
-			<p><strong>Select your region:</strong></p>
+			<p><strong>Select your sex:</strong></p>
                 <p><input type="radio" id="male" name="sex" value="male" required>
                 <label for="male">Male</label></br>
                 <input type="radio" id="female" name="sex" value="female" required>
